# EquiRep

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
example/: input.fasta  output.fasta
src/: EquiRep  EquiRep.cpp  Makefile  Makefile.am  configure
src/.deps/: EquiRep-EquiRep.Po  EquiRep.Po
