AC_INIT([EquiRep], [1.0.0], [tkz5115@psu.edu])
AM_INIT_AUTOMAKE()

# Check for a C++ compiler
AC_PROG_CXX
AC_PROG_CC

# Set up the configuration files
AC_CONFIG_SRCDIR([src/EquiRep.cpp])  # Verify this file exists
AC_CONFIG_HEADERS([config.h])       # Generate a configuration header
AC_CONFIG_FILES([Makefile src/Makefile])

# Output the configuration
AC_OUTPUT
